--- a/contact.html
+++ b/contact.html
@@ -1,96 +1,120 @@
-			<!DOCTYPE html>
-			<html lang="en">
-			<head>
-				<title>BODHI 10.0</title>
-				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<meta charset="utf-8">
-				<meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0" />
-				<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-				<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-				<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-				<link href="css/font-awesome.css" rel="stylesheet">
-				<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-				<link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
-				<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-				<script src="js/bootstrap.js"></script>
-			</head>
-			<body>
-				<div class="banner-1">
-						<div class="header">
-							<div class="container">
-								<div class="top-nav">
-									<nav class="navbar navbar-default">
-										<div class="navbar-header">
-											<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-												<span class="sr-only">Toggle navigation</span>
-												<span class="icon-bar"></span>
-												<span class="icon-bar"></span>
-												<span class="icon-bar"></span>
-											</button>
-										</div>
-										<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-											<ul class="nav navbar-nav navbar-right">
-												<li></li>
-												<li></li>
-												<li><a href="index.html">Home</a></li>
-												<li><a href="about.html">About</a></li>
-												<li><a href="events.html">Events</a></li>
-												<li><a href="contact.html" class="active">Contact Us</a></li>
-											</ul>
-										</div>
-									</nav>
-								</div>
-							</div>
-						</div>
-				</div>
-				<div class="sub-agileitsinfo">  
-					<div class="subscribe wthree-sub"> 
-						<div class="container">    
-							<h3 class="w3ls_head">Keep in Touch</h3>
-								
-				<div class="main-textgrids">
-					<div class="container">
-						<div class="ab-agile">
-							<div class="col-md-5 ab-pic">
-								 <img src="images/contact/jose.jpg" alt=" " class="image-round-frame" />
+<!DOCTYPE html>
+<html lang="en">
 
-							</div>
-							<div class="col-md-7 ab-text align-left" >
-								<h4>Jose Francis</h4>
-								<p>Union Chairman<br><br>+91 94954 26599</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-						<div class="statements">
-							
-							<div class="col-md-7 ab-text align-right">
-								<h4>Basil George</h4>
-								<p>Union General Secretary <br><br>+91 98951 95005</p>
-							</div>
-							<div class="col-md-5 facts">
-								<img src="images/contact/basil.jpg" alt=" " class="image-round-frame" />
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-						<div class="ab-agile">
-							<div class="col-md-5 ab-pic">
-								 <img src="images/contact/hanna.jpg" alt=" " class="image-round-frame" />
-							</div>
-							<div class="col-md-7 ab-text  align-left">
-								<h4>Hanna George</h4>
-								<p>Union Vice Chairperson<br><br>+91 94961 82916</p>
-							</div>
-							<div class="clearfix"> </div>
-						</div>
-					</div>		
-						</div>
-					</div>
-				<div class="w3-agile-footer">
-					<div class="container">
-						<div class="agileits-w3layouts-copyright">
-							<p>© Bodhi 10.0</p>
-						</div>
-					</div>
-				</div>
-			</body>	
-			</html>
+<head>
+    <title>BODHI 10.0</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0" />
+    <script type="application/x-javascript">
+        addEventListener("load", function() {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+</head>
+
+<body>
+    <div class="banner-1">
+        <div class="header">
+            <div class="container">
+                <div class="top-nav">
+                    <nav class="navbar navbar-default">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li></li>
+                                <li></li>
+                                <li><a href="index.html">Home</a>
+                                </li>
+                                <li><a href="about.html">About</a>
+                                </li>
+                                <li><a href="events.html">Events</a>
+                                </li>
+                                <li><a href="contact.html" class="active">Contact Us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="sub-agileitsinfo">
+        <div class="subscribe wthree-sub">
+            <div class="container">
+                <h3 class="w3ls_head">Keep in Touch</h3>
+
+                <div class="main-textgrids">
+                    <div class="container">
+                        <div class="ab-agile">
+                            <div class="col-md-5 ab-pic">
+                                <img src="images/contact/jose.jpg" alt=" " class="image-round-frame" />
+
+                            </div>
+                            <div class="col-md-7 ab-text align-left">
+                                <h4>Jose Francis</h4>
+                                <p><h3>Union Chairman</h3>
+                                    <h3>+91 94954 26599</h3></p>
+                            </div>
+                            <div class="clearfix"> </div>
+                        </div>
+                        <div class="statements">
+
+                            <div class="col-md-7 ab-text align-right">
+                                <h4>Basil George</h4>
+                                <p><h3>Union General Secretary</h3>
+                                    <h3>+91 98951 95005</h3></p>
+                            </div>
+                            <div class="col-md-5 facts">
+                                <img src="images/contact/basil.jpg" alt=" " class="image-round-frame" />
+                            </div>
+                            <div class="clearfix"> </div>
+                        </div>
+                        <div class="ab-agile">
+                            <div class="col-md-5 ab-pic">
+                                <img src="images/contact/hanna.jpg" alt=" " class="image-round-frame" />
+                            </div>
+                            <div class="col-md-7 ab-text  align-left">
+                                <h4>Hanna George</h4>
+                                <p><h3>Union Vice Chairperson</h3>
+                                    <h3>+91 94961 82916</h3></p>
+                            </div>
+                            <div class="clearfix"> </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    </div>
+
+    <div class="w3-agile-footer">
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.793344774889!2d76.62843731479374!3d9.951144992884686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07dd2f387bbce7%3A0x33c9780276b797b6!2sViswajyothi+College+of+Engineering+and+Technology!5e0!3m2!1sen!2sus!4v1502988914437" allowfullscreen></iframe>
+        </div>
+        <div class="agileits-w3layouts-copyright">
+            <p>© Bodhi 10.0</p>
+        </div>
+    </div>
+</body>
+
+</html>
