Events updated CS

--- a/events.html
+++ b/events.html
@@ -769,7 +769,19 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>CODE PURSUIT (DAY 1)<br>STAFF CO-ORDINATOR: Mrs. Nimmy George, Mrs. Rini Simon, Mrs. K G Sindhu<br>STUDENT CO-ORDINATORS: Elvis Sabu, Eldho P Joy, Abins Subair<br>PRIZE MONEY: FIRST -Rs.6000, SECOND -Rs.3000<br>Rs.80 per Team (2 per Team)<br>VENUE: PG LAB 2-CS (D BLOCK)</p>
+										<p>CODE PURSUIT (DAY 1)<br>
+										RULES :
+										<ul>
+											<li>2 persons per team.</li>
+											<li>Only 8 teams will be selected for the event from the prelims</li>
+											<li>Event duration will be based on a preset timer.</li>
+											<li>Only those teams who report at the right time of the end of the event will be considered for the results.</li>
+											<li>No team is allowed to interact with any of the coordinaters or volunteers nor to use internet or smart phones during the event duration.</li>
+											<li>The judges' decision is final and no correspondence will be entered into.</li>
+											<li>Any violation of the above may lead to disqualification.</li>
+											<li>Prerequisites : c++</li>
+										</ul>
+										<br>STAFF CO-ORDINATOR: Mrs. Nimmy George, Mrs. Rini Simon, Mrs. K G Sindhu<br>STUDENT CO-ORDINATORS: Elvis Sabu, Eldho P Joy, Abins Subair<br>PRIZE MONEY: FIRST -Rs.6000, SECOND -Rs.3000<br>Rs.80 per Team (2 per Team)<br>VENUE: PG LAB 2-CS (D BLOCK)</p>
 									</div>
 								</section>
 							</div>
@@ -825,14 +837,13 @@
 								</div>
 								<section>
 									<div class="modal-body">
-
 										<p>Traditio (DAY 2)<br>
 										<br>RULES
                                                 <br>
                                                 <ol>
                                                     <li>Participants are requested to mail the abstract along with their paper and contact details on or before 22nd August to bodhipaperpstn17@gmail.com</li>
                                                     <li>The paper should not include plagiarism(Cut and paste/Copy)</li>
-                                                    <li>Confirmed list of papers selected for presentation will be announced on 15th February 2017.</li>
+                                                    <li>Confirmed list of papers selected for presentation will be announced on 23rd August 2017.</li>
                                                     <li>The candidates should send their name, phone number, email id, and the name of the college along with the paper.</li>
                                                     <li>Maximum participation of two members in a group is allowed.</li>
                                                     <li>The participants are requested to report at the registration desk 30 minutes before the commencement of the event.</li>
@@ -843,7 +854,8 @@
                                                     <li>Decision of judges will be final.</li>
                                                     <li>Directions provided by the coordinates should be strictly adhered to.</li>
                                                 </ol>
-										<br>STAFF CO-ORDINATOR: Mrs. Resmi Cherian, Mrs. Neenu Daniel, Mr. Amel Austine<br>STUDENT CO-ORDINATORS: Rose Mary George, Anna Maria Joseph, Sneha Benoy<br>PRIZE MONEY: FIRST: Rs.3000 SECOND: Rs.2000<br>Registration Fee: Rs.100<br>VENUE: R&D SEMINAR HALL</p>
+                                                <a href="http://bit.ly/2ibXHfv" target="_blank"><button>REGISTER NOW</button></a>
+										<br>STAFF CO-ORDINATOR: Mrs. Resmi Cherian, Mrs. Neenu Daniel, Mr. Amel Austine<br>STUDENT CO-ORDINATORS: Rose Mary George, Anna Maria Joseph, Sneha Benoy<br>PRIZE MONEY: FIRST: Rs.3000 SECOND: Rs.2000<br>Registration Fee: Rs.100<br>VENUE: R&amp;D SEMINAR HALL</p>
 									</div>
 								</section>
 							</div>
@@ -945,7 +957,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Technical Talk (DAY 1)<br>STAFF CO-ORDINATOR: Mr. Jobin Jose, Mr. Basil Baby, Mr. Sijo Mathew<br>STUDENT CO-ORDINATORS: Anjana Abraham, Ponnumol Santhosh, Rehana T H<br>VENUE: R&D SEMINAR HALL</p>
+										<p>Technical Talk (DAY 1)<br>STAFF CO-ORDINATOR: Mr. Jobin Jose, Mr. Basil Baby, Mr. Sijo Mathew<br>STUDENT CO-ORDINATORS: Anjana Abraham, Ponnumol Santhosh, Rehana T H<br>VENUE: R&amp;D SEMINAR HALL</p>
 									</div>
 								</section>
 							</div>
@@ -1038,7 +1050,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Maze Run 2.0 (DAY 1 & 2)<br>STAFF CO-ORDINATOR: Mr. Santhanu P. Mohan<br>STUDENT CO-ORDINATORS: Abhijith S. Nair (9961347861)<br>PRIZE MONEY: Rs.2000 per day<br>T-Rs.4000, SECOND Rs-2000<br>Registration Fee: Rs.50</p>
+										<p>Maze Run 2.0 (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Mr. Santhanu P. Mohan<br>STUDENT CO-ORDINATORS: Abhijith S. Nair (9961347861)<br>PRIZE MONEY: Rs.2000 per day<br>T-Rs.4000, SECOND Rs-2000<br>Registration Fee: Rs.50</p>
 									</div>
 								</section>
 							</div>
@@ -1159,7 +1171,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>ROADIES (DAY 1 & 2)<br>STAFF CO-ORDINATOR: Arun K<br>STUDENT CO-ORDINATORS: SUDHAKARA MENON SURYA (7591974669)<br>PRIZE MONEY: Rs.300<br>Rs. 100 PER TEAM (1 TO 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&D Block)</p>
+										<p>ROADIES (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Arun K<br>STUDENT CO-ORDINATORS: SUDHAKARA MENON SURYA (7591974669)<br>PRIZE MONEY: Rs.300<br>Rs. 100 PER TEAM (1 TO 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&amp;D Block)</p>
 									</div>
 								</section>
 							</div>
@@ -1187,7 +1199,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>ROBO RACE (DAY 2)<br>STAFF CO-ORDINATOR: Rakesh Jose<br>STUDENT CO-ORDINATORS: ALEN JAMES (9633828133)<br>PRIZE MONEY: FIRST-Rs.4000, SECOND Rs-2000<br>Rs. 50 PER HEAD (1- 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&D Block)</p>
+										<p>ROBO RACE (DAY 2)<br>STAFF CO-ORDINATOR: Rakesh Jose<br>STUDENT CO-ORDINATORS: ALEN JAMES (9633828133)<br>PRIZE MONEY: FIRST-Rs.4000, SECOND Rs-2000<br>Rs. 50 PER HEAD (1- 4 MEMBERS)<br>VENUE: NEW PARKING GROUND (Near R&amp;D Block)</p>
 									</div>
 								</section>
 							</div>
@@ -1299,7 +1311,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>PROJECT EXPO (DAY 1 & 2)<br>STAFF CO-ORDINATOR: Tijo Jose<br>STUDENT CO-ORDINATORS: NIVIN P JOHNY (8089431312<br>TIME: 10:00 AM TO 4:00 PM</p>
+										<p>PROJECT EXPO (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Tijo Jose<br>STUDENT CO-ORDINATORS: NIVIN P JOHNY (8089431312<br>TIME: 10:00 AM TO 4:00 PM</p>
 									</div>
 								</section>
 							</div>
@@ -1327,7 +1339,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>MECH ZONE (DAY 1 & 2)<br>STAFF CO-ORDINATOR: Frenosh K Francis<br>STUDENT CO-ORDINATORS: ALI HAMDHAN (9744998474)<br>TIME: 10 AM TO 4 PM<br>VENUE: IN FRONT & INSIDE MECHANICAL WORKSHOP</p>
+										<p>MECH ZONE (DAY 1 &amp; 2)<br>STAFF CO-ORDINATOR: Frenosh K Francis<br>STUDENT CO-ORDINATORS: ALI HAMDHAN (9744998474)<br>TIME: 10 AM TO 4 PM<br>VENUE: IN FRONT &amp; INSIDE MECHANICAL WORKSHOP</p>
 									</div>
 								</section>
 							</div>
@@ -1420,7 +1432,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>BEST MANAGER (DAY 2)<br>STAFF CO-ORDINATOR: MIDHUN JOSE<br>STUDENT CO-ORDINATORS: RICHIN PHILIP MATHEW (8289976049)<br>PRIZE MONEY: Rs.10000<br>VENUE: D 223, R&D,GD ROOM</p>
+										<p>BEST MANAGER (DAY 2)<br>STAFF CO-ORDINATOR: MIDHUN JOSE<br>STUDENT CO-ORDINATORS: RICHIN PHILIP MATHEW (8289976049)<br>PRIZE MONEY: Rs.10000<br>VENUE: D 223, R&amp;D,GD ROOM</p>
 									</div>
 								</section>
 							</div>
