Events updated CS

--- a/events.html
+++ b/events.html
@@ -764,7 +764,7 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									CODE PURSUIT
+									CODE PURSUIT - Scavenger Hunt
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
@@ -804,12 +804,12 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									Dossier Notch
+									Dossier Notch - Exhibition
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Dossier Notch (DAY 1 & 2)<br>STAFF CO-ORDINATOR: Mrs. Ritty Jacob, Mr. Arsha J.K, Mr. Manoj Francis<br>STUDENT CO-ORDINATORS: Jibin K.B, Kevin Sabu, Seby Davis<br>PRIZE MONEY: FIRST-Rs.3000, SECOND Rs-2000, THIRD-Rs.1000<br>TIME: 10 AM TO 4 PM<br>VENUE: CS SEMINAR HALL</p>
+										<p>Dossier Notch (DAY 1 &amp; 2)<br> A Real World Network Expo<br>STAFF CO-ORDINATOR: Mrs. Ritty Jacob, Mr. Arsha J.K, Mr. Manoj Francis<br>STUDENT CO-ORDINATORS: Jibin K.B, Kevin Sabu, Seby Davis<br><br>TIME: 10 AM TO 4 PM<br>VENUE: CS SEMINAR HALL</p>
 									</div>
 								</section>
 							</div>
@@ -841,7 +841,7 @@
 										<br>RULES
                                                 <br>
                                                 <ol>
-                                                    <li>Participants are requested to mail the abstract along with their paper and contact details on or before 22nd August to bodhipaperpstn17@gmail.com</li>
+                                                    <li>Participants are requested to mail the abstract along with their paper and contact details on or before 22nd August <a href="http://bit.ly/2ibXHfv" target="_blank">here</a></li>
                                                     <li>The paper should not include plagiarism(Cut and paste/Copy)</li>
                                                     <li>Confirmed list of papers selected for presentation will be announced on 23rd August 2017.</li>
                                                     <li>The candidates should send their name, phone number, email id, and the name of the college along with the paper.</li>
@@ -854,7 +854,6 @@
                                                     <li>Decision of judges will be final.</li>
                                                     <li>Directions provided by the coordinates should be strictly adhered to.</li>
                                                 </ol>
-                                                <a href="http://bit.ly/2ibXHfv" target="_blank"><button>REGISTER NOW</button></a>
 										<br>STAFF CO-ORDINATOR: Mrs. Resmi Cherian, Mrs. Neenu Daniel, Mr. Amel Austine<br>STUDENT CO-ORDINATORS: Rose Mary George, Anna Maria Joseph, Sneha Benoy<br>PRIZE MONEY: FIRST: Rs.3000 SECOND: Rs.2000<br>Registration Fee: Rs.100<br>VENUE: R&amp;D SEMINAR HALL</p>
 									</div>
 								</section>
@@ -878,7 +877,7 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									C- Swap
+									C- Swap - Synchronized Coders
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
@@ -924,7 +923,7 @@
 						<div class="modal-dialog" role="document">
 							<div class="modal-content">
 								<div class="modal-header">
-									Nemesis
+									Nemesis - FIFA Gaming
 									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 								</div>
 								<section>
@@ -957,7 +956,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Technical Talk (DAY 1)<br>STAFF CO-ORDINATOR: Mr. Jobin Jose, Mr. Basil Baby, Mr. Sijo Mathew<br>STUDENT CO-ORDINATORS: Anjana Abraham, Ponnumol Santhosh, Rehana T H<br>VENUE: R&amp;D SEMINAR HALL</p>
+										<p>Technical Talk (DAY 1)<br>A technical talk on Robotic Design<br>STAFF CO-ORDINATOR: Mr. Jobin Jose, Mr. Basil Baby, Mr. Sijo Mathew<br>STUDENT CO-ORDINATORS: Anjana Abraham, Ponnumol Santhosh, Rehana T H<br>VENUE: R&amp;D SEMINAR HALL</p>
 									</div>
 								</section>
 							</div>
