Events updated ec eee

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,8 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.793344774889!2d76.62843731479374!3d9.951144992884686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07dd2f387bbce7%3A0x33c9780276b797b6!2sViswajyothi+College+of+Engineering+and+Technology!5e0!3m2!1sen!2sus!4v1502988914437" allowfullscreen></iframe>
         </div>
         <div class="agileits-w3layouts-copyright">
-            <p>© Bodhi 10.0</p>
+            <p><a href="index.html">© Bodhi 10.0</a> | <a href="about.html">About</a> | <a href="events.html">Events</a> | <a href="contact.html">Contact Us</a></p><br><br>
+            <p>Coded with <span style="color: red">❤</span> by <a href="https://www.github.com/SooluThomas" target="_blank">SooluThomas</a></p>
         </div>
     </div>
 </body>
