--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
 				<div class="container">
 					<div class="footer-grids">
 						<div class="agileits-w3layouts-copyright">
-							<p>© Bodhi 10.0 </p>
+							<p><a href="index.html">© Bodhi 10.0</a> | <a href="about.html">About</a> | <a href="events.html">Events</a> | <a href="contact.html">Contact Us</a></p><br><br>
+							<p>Coded with <span style="color: red">❤</span> by <a href="https://www.github.com/SooluThomas" target="_blank">SooluThomas</a></p>
 						</div>
 					</div>
 				</div>
