--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 							</div>
 							<section>
 								<div class="modal-body">
-									<img src="images/drone.jpg" alt=" " class="img-responsive" />
+									<img src="images/general/football.jpg" alt=" " class="img-responsive" />
 									<p><ul>
 										<li>Entry till August 5pm.</li>
 										<li>Judgement will be based on the maximum number of likes and shares.</li>
