Events updated cs

--- a/events.html
+++ b/events.html
@@ -729,11 +729,11 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Traditio (DAY 2)<br>
+										<p>Traditio (DAY 1)<br>
 										<br>RULES
                                                 <br>
                                                 <ol>
-                                                    <li>Participants are requested to mail the abstract along with their paper and contact details on or before 22nd August <a href="http://bit.ly/2ibXHfv" target="_blank">here</a></li>
+                                                    <li>Participants are requested register <a href="http://bit.ly/2ibXHfv" target="_blank">here</a></li>
                                                     <li>The paper should not include plagiarism(Cut and paste/Copy)</li>
                                                     <li>Confirmed list of papers selected for presentation will be announced on 23rd August 2017.</li>
                                                     <li>The candidates should send their name, phone number, email id, and the name of the college along with the paper.</li>
@@ -820,7 +820,7 @@
 								</div>
 								<section>
 									<div class="modal-body">
-										<p>Nemesis (DAY 1)<br>STAFF CO-ORDINATOR: Mr. Joe Mathew Jacob, Mrs. Remya Paul, Ms. Neethu Joseph<br>STUDENT CO-ORDINATORS: Rooney Emmanuel(9961823545)<br>Alex Jo Abraham (8547934007)<br>Jarald Jake John (9847585092)<br>PRIZE MONEY: FIRST-Rs.6000, SECOND-Rs.3000<br>Registration Fee: Rs.50<br>VENUE: PROJECT LAB-CS (C BLOCK)</p>
+										<p>Nemesis (DAY 2)<br>STAFF CO-ORDINATOR: Mr. Joe Mathew Jacob, Mrs. Remya Paul, Ms. Neethu Joseph<br>STUDENT CO-ORDINATORS: Rooney Emmanuel(9961823545)<br>Alex Jo Abraham (8547934007)<br>Jarald Jake John (9847585092)<br>PRIZE MONEY: FIRST-Rs.6000, SECOND-Rs.3000<br>Registration Fee: Rs.50<br>VENUE: PROJECT LAB-CS (C BLOCK)</p>
 									</div>
 								</section>
 							</div>
