Events updated general events

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	<div class="services news">
 		<div class="container"> 
 			<div class="new-w3l">
-				<h3 class="w3ls_head">News &amp; Events</h3>
+				<h3 class="w3ls_head">General Events</h3>
 				<p class="para">Tighten up 'coz its your chance to win<span> amazing prizes</span> for the events below. Hurry Up and Register to win...!!!</p>			
 				</div>
 				<div class="news-agileinfo">
@@ -169,20 +169,20 @@
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Register Now</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal2">Last Date: 20th August 2017</a></h4> 
-								<p>Morbi a vehicula risus, vitae interdum orci Praesent acelei turpis. Morbi a vehicula risus</p> 
+								<h4><a href="#" data-toggle="modal" data-target="#myModal2">4'S FOOTBALL</a></h4> 
+								<p></p> 
 							</div>
 						</div>
 					</div>
 					<div class="col-sm-3 news-w3lgrids">
 						<div class="news-gridtext">
 							<div class="news-w3img">
-								<a href="#" data-toggle="modal" data-target="#myModal2"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
+								<a href="#" data-toggle="modal" data-target="#myModal3"><img src="images/general/football.png" class="img-responsive zoom-img" alt=""/></a>
 							</div>
 							<div class="news-w3imgtext">
 								<h5 class="w3-agilep">Register Now</h5>
-								<h4><a href="#" data-toggle="modal" data-target="#myModal2">Last Date: 20th August 2017</a></h4> 
-								<p>Morbi a vehicula risus, vitae interdum orci Praesent acelei turpis. Morbi a vehicula risus</p> 
+								<h4><a href="#" data-toggle="modal" data-target="#myModal3">SPOT PHOTOGRAPHY</a></h4> 
+								<p></p> 
 							</div>
 						</div>
 					</div>
@@ -197,7 +197,11 @@
 				<h3 class="w3ls_head">Guests</h3>
 					<div class="testi-w3agileinfo"> 
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation" class="active"><a href="#testi" aria-controls="testi" role="tab" data-toggle="tab"><img src="images/jibinJose.png" alt="" style="border-radius: 15px 50px 30px" height="200" width="200" /></a></li>
+							<li role="presentation" class="active">
+								<a href="#testi" aria-controls="testi" role="tab" data-toggle="tab">
+									<img src="images/jibinJose.png" alt="" style="border-radius: 15px 50px 30px" height="200" width="200" /></a>
+
+							</li>
 						</ul> 
 						<div class="tab-content">
 							<div role="tabpanel" class="tab-pane active" id="testi">
@@ -272,22 +276,47 @@
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
-								AeroTrac
+								4'S FOOTBALL
 								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
 							</div>
 							<section>
 								<div class="modal-body">
 									<img src="images/drone.jpg" alt=" " class="img-responsive" />
 									<p><ul>
-										<li>Entry till August 5pm.</li>
-										<li>Judgement will be based on the maximum number of likes and shares.</li>
-										<li>Final decision will be up the judging panel.</li>
-										<li>Prizes will be <b>2k and 1k</b> respectively for securing the first and second positions.</li>
-										<li>Your entries can be send along with the smule link <a href="http://bit.do/SWIVEL" style="color: red;" target="_blank">here</a> with your name, mailID and college details.</li>
-										<li>When you are filling the details, make sure that <b>the particpant name and the file name should be the same</b>.</li>
-										<li>We will send you a confirmation mail when the link is uploaded on the Facebook page.</li>
-									</ul>
-										<i>"Let's Take it to air!"</i></p>
+										<li>VENUE: OLD BASKETBALL COURT</li>
+										<li>REGISTRATION: Rs. 50 PER HEAD</li>
+										<li>NO. OF PARTICIPANTS: 4</li>
+										<li>PRIZES WORTH 5K</li>
+										<li>DATE: 25 &amp; 26th August</li>
+										<li>TIME: 11.30 am TO 4 pm </li>
+										<li>Staff Coordinator: Eldhose Kurian</li>
+										<li>Student Coordinator: TONEY DOMINIC (9495212216)</li>
+									</ul></p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</div>
+				<div class="modal video-modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModal3">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								SPOT PHOTOGRAPHY
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>						
+							</div>
+							<section>
+								<div class="modal-body">
+									<img src="images/drone.jpg" alt=" " class="img-responsive" />
+									<p><ul>
+										<li>VENUE: B- Block Ground Floor (Class Room)</li>
+										<li>REGISTRATION: Rs. 50 PER HEAD</li>
+										<li>NO. OF PARTICIPANTS: 1</li>
+										<li>PRIZES WORTH 4K</li>
+										<li>DATE: 26th August</li>
+										<li>TIME: 10 am TO 4 pm </li>
+										<li>Staff Coordinator: Eldhose Paul</li>
+										<li>Student Coordinator: GITTO SUNNY (9495715188)</li>
+									</ul></p>
 								</div>
 							</section>
 						</div>
