Register link for CODE PURSUIT

--- a/events.html
+++ b/events.html
@@ -665,6 +665,7 @@
 										<p>CODE PURSUIT (DAY 1)<br>
 										RULES :
 										<ul>
+											<li>Register <a target="_blank" href="https://bodhi100.typeform.com/to/CvTUj3">here</a></li>
 											<li>2 persons per team.</li>
 											<li>Only 8 teams will be selected for the event from the prelims</li>
 											<li>Event duration will be based on a preset timer.</li>
