--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>BODHI 10.0</title>
+    <title>BODHI 10.0 | Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0" />
+    <meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0 , bodhi official" />
     <script type="application/x-javascript">
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -37,18 +37,16 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
                             </button>
                         </div>
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
                                 <li></li>
-                                <li></li>
-                                <li><a href="index.html">Home</a>
-                                </li>
-                                <li><a href="about.html">About</a>
-                                </li>
-                                <li><a href="events.html">Events</a>
-                                </li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="events.html">Events</a></li>
+                                <li><a href="gallery.html">Gallery</a></li>
                                 <li><a href="contact.html" class="active">Contact Us</a>
                                 </li>
                             </ul>
