--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>BODHI 10.0</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0" />
+	<meta name="keywords" content="BODHI, VJCET, techfest, bodhi 10.0, bodhi official" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link rel="icon" href="../images/bodhi.png">
@@ -28,16 +28,17 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
 							</button>
 						</div>
 						<!--navbar-header-->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li></li>
-								<li></li>
 								<li><a href="index.html" class="active">Home</a></li>
 								<li><a href="about.html">About</a></li>
 								<li><a href="events.html">Events</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
 							</ul>	
 							<div class="clearfix"> </div>	
