--- a/events.html
+++ b/events.html
@@ -1731,7 +1731,7 @@
 	<div class="w3-agile-footer">
 		<div class="container">
 			<div class="agileits-w3layouts-copyright">
-				<p><a href="index.html">© Bodhi 10.0</a> | <a href="about.html">About</a> | <a href="events.html">Events</a> | <a href="contact.html">Contact Us</a></p><br><br>
+				<p><a href="index.html">© Bodhi 10.0</a> | <a href="about.html">About</a> | <a href="events.html">Events</a> | <a href="gallery.html">Gallery</a> | <a href="contact.html">Contact Us</a></p><br><br>
 				<p>Coded with <span style="color: red">❤</span> by <a href="https://www.github.com/SooluThomas" target="_blank">SooluThomas</a></p>
 			</div>
 		</div>
