--- a/contact.html
+++ b/contact.html
@@ -71,13 +71,13 @@
                                     <h3>+91 90488 89894</h3></p>
                             </div>
                             <div class="col-md-5 facts">
-                                <img src="images/contact/tony.jpg" alt=" " class="image-round-frame" />
+                                <img src="images/contact/tony.jpg" alt=" " class="image-round-frame" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;" />
                             </div>
                             <div class="clearfix"> </div>
                         </div>
                         <div class="ab-agile">
                             <div class="col-md-5 ab-pic">
-                                <img src="images/contact/jose.jpg" alt=" " class="image-round-frame" />
+                                <img src="images/contact/jose.jpg" alt=" " class="image-round-frame" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;" />
 
                             </div>
                             <div class="col-md-7 ab-text align-left">
@@ -95,13 +95,13 @@
                                     <h3>+91 98951 95005</h3></p>
                             </div>
                             <div class="col-md-5 facts">
-                                <img src="images/contact/basil.jpg" alt=" " class="image-round-frame" />
+                                <img src="images/contact/basil.jpg" alt=" " class="image-round-frame" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;"/>
                             </div>
                             <div class="clearfix"> </div>
                         </div>
                         <div class="ab-agile">
                             <div class="col-md-5 ab-pic">
-                                <img src="images/contact/hanna.jpg" alt=" " class="image-round-frame" />
+                                <img src="images/contact/hanna.jpg" alt=" " class="image-round-frame" style="border: 2px solid dark; border-radius: 100%; max-width: 250px;"/>
                             </div>
                             <div class="col-md-7 ab-text  align-left">
                                 <h4>Hanna George</h4>
